[tool.poetry]
name = "random-facts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
ffmpeg-python = "^0.2.0"
opencv-python = "^4.11.0.86"
moviepy = "^2.1.2"
jupyterlab = "^4.3.4"
ipykernel = "^6.29.5"
python-dotenv = "^1.0.1"
langchain = "^0.3.14"
langchain-mistralai = "^0.2.4"
langchain-community = "^0.3.14"
mistralai = "^1.3.1"
langgraph = "^0.2.64"
lmnt = "^1.1.7"
wave = "^0.0.2"
streamlit = "^1.41.1"
loguru = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
